# cyborg-data

./: .ci-operator.yaml  CLAUDE.md  Makefile  README.md  benchmark_test.go  datasource_test.go  datasources.go  employee_test.go  enums_test.go  errors.go  errors_test.go  gcs_datasource.go  go.mod  interface.go  iterators.go  logger.go  organization_test.go  pillar_test.go  service.go  service_edge_cases_test.go  service_test.go  team_test.go  test_helpers.go  types.go  version_test.go
example/: README.md  main.go  test-gcs-env.sh
example/comprehensive/: comprehensive  main.go
example/file-only/: main.go
example/with-gcs/: main.go  main_gcs.go  main_stub.go
go/: README.md  anonymization_test.go  benchmark_test.go  context_test.go  datasource_test.go  employee_test.go  errors.go  errors_test.go  gcs_fake_test.go  go.mod  hierarchy_api_test.go  hierarchy_test.go  interface.go  iterators_test.go  organization_test.go  redaction_test.go  service.go  service_edge_cases_test.go  service_test.go  team_group_test.go  team_test.go  test_helpers.go  types.go
go/example/: README.md
go/example/comprehensive/: comprehensive  main.go
go/example/with-gcs/: main_gcs.go  main_stub.go
go/internal/testing/: fake_gcs.go  filesource.go
internal/testing/: filesource.go
parity/: run_parity_check.py
parity/discovery/: __init__.py  go_parser.py  name_mapping.py  python_introspector.py
parity/go_runner/: go.mod  main.go
parity/inputs/: __init__.py  generator.py  test_data_catalog.py
parity/python_runner/: runner.py
python/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/examples/: __init__.py  async_demo.py  async_performance_demo.py  gcs_demo.py
python/orgdatacore/: __init__.py  _anonymization.py  _async.py  _exceptions.py  _gcs.py  _log.py  _redaction.py  _serialization.py  _service.py  _types.py  _version.py  async_datasources.py  async_service.py  constants.py  datasources.py  interface.py  logging.py  service.py  test_helpers.py  types.py
python/orgdatacore/_internal/: __init__.py
python/orgdatacore/_internal/testing/: __init__.py  fake_gcs.py  filesource.py  helpers.py
python/orgdatacore/internal/: __init__.py
python/orgdatacore/internal/testing/: __init__.py  filesource.py  helpers.py
python/tests/: __init__.py  conftest.py  test_anonymization.py  test_async_service.py  test_context.py  test_edge_cases.py  test_employee.py  test_exceptions.py  test_gcs.py  test_hierarchy.py  test_hierarchy_api.py  test_logging.py  test_mapping.py  test_organization.py  test_pillar.py  test_redaction.py  test_service.py  test_team.py  test_team_group.py  test_version.py
scripts/: validate-api-parity.sh
testdata/: test_org_data.json  test_org_data_pii_free.json
